smol edit for keywords and stuff

--- a/web/index.html
+++ b/web/index.html
@@ -18,13 +18,14 @@
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="Start whatsapp conversations without creating new contacts">
+    <meta name="description" content="Send whatsapp messages to unsaved numbers instantly">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="quickchat">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <meta name="keywords" content="whatsapp, whatsapp web, whatsapp unsaved number, message to whatsapp, whatsapp without saving number">
 
 
     <!-- Favicon -->
